@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="81">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="82">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Action name="extra_template"/>
@@ -157,6 +157,7 @@
   <Separator/>
   <Action name="change_case"/>
   <Action name="personal_expr"/>
+  <Action name="add_personal_expression"/>
   <Action name="custom_vars"/>
   <Action name="select_bookmark"/>
   <ActionList name="datatools"/>
